@@ -14,6 +14,7 @@
         <maven.compiler.target>10</maven.compiler.target>
         <maven.compiler.release>10</maven.compiler.release>
         <maven.dependency.version>2.8</maven.dependency.version>
+        <maven.exec.version>1.3.2</maven.exec.version>
         <openjfx.version>11</openjfx.version>
         <netty.version>4.1.25.Final</netty.version>
         <slf4j.version>1.8.0-beta2</slf4j.version>
@@ -141,17 +142,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.ow2.asm</groupId>
-                        <artifactId>asm</artifactId>
-                        <version>6.1.1</version>
-                    </dependency>
-                </dependencies>
+                <version>3.8.0</version>
             </plugin>
-
-            <!-- copy all dependencies of your app to target folder, for call javapackager-->
+            <!-- copy all dependencies of your app to target folder, for calling jlink or jpackager-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -371,7 +364,33 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${maven.exec.version}</version>
+                <executions>
+                    <execution>
+                        <id>add-main-class</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jar</executable>
+                            <arguments>
+                                <argument>--main-class</argument>
+                                <argument>${mainClass}</argument>
+                                <argument>--module-version</argument>
+                                <argument>${project.version}</argument>
+                                <argument>--update</argument>
+                                <argument>--file</argument>
+                                <argument>${project.build.directory}/libs/${project.build.finalName}.jar
+                                </argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -380,10 +399,11 @@
             <id>jlink</id>
             <build>
                 <plugins>
+                    <!-- the maven jar plugin current not add main-class to module info-->
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.3.2</version>
+                        <version>${maven.exec.version}</version>
                         <executions>
                             <execution>
                                 <id>jlink</id>
@@ -401,7 +421,7 @@
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}/${project.artifactId}</argument>
                                         <argument>--launcher</argument>
-                                        <argument>monkey-proxy=${mainModuleName}/${mainClass}</argument>
+                                        <argument>monkey-proxy=${mainModuleName}</argument>
                                         <argument>--compress</argument>
                                         <argument>1</argument>
                                         <argument>--strip-debug</argument>
@@ -424,7 +444,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.3.2</version>
+                        <version>${maven.exec.version}</version>
                         <executions>
                             <execution>
                                 <id>jpackager</id>
@@ -436,16 +456,25 @@
                                     <executable>/Users/clear/jdk/jdk.packager/jpackager</executable>
                                     <arguments>
                                         <argument>create-image</argument>
-                                        <argument>--class</argument>
-                                        <argument>${mainClass}</argument>
-                                        <argument>--input</argument>
-                                        <argument>${project.build.directory}/libs</argument>
                                         <argument>--output</argument>
                                         <argument>${project.build.directory}</argument>
-                                        <argument>-outfile</argument>
-                                        <argument>${project.build.finalName}.jar</argument>
                                         <argument>--name</argument>
                                         <argument>${project.name}</argument>
+                                        <argument>${mainClass}</argument>
+                                        <argument>--version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--identifier</argument>
+                                        <argument>${project.groupId}.${project.artifactId}</argument>
+                                        <argument>--module-path</argument>
+                                        <argument>${project.build.directory}/libs</argument>
+                                        <argument>--module</argument>
+                                        <argument>${mainModuleName}</argument>
+                                        <argument>--add-modules</argument>
+                                        <argument>org.slf4j.simple</argument>
+                                        <argument>--vendor</argument>
+                                        <argument>${project.groupId}</argument>
+                                        <argument>--icon</argument>
+                                        <argument>${icon.path}</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
@@ -453,6 +482,40 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <icon.path>src/main/deploy/package/macosx/MonkeyProxy.icns</icon.path>
+            </properties>
+        </profile>
+        <profile>
+            <id>unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <properties>
+                <icon.path>src/main/deploy/package/linux/MonkeyProxy.png</icon.path>
+            </properties>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <icon.path>src/main/deploy/package/windows/MonkeyProxy.ico</icon.path>
+            </properties>
         </profile>
     </profiles>
 </project>
